--- a/app/src/main/res/layout/activity_set_random.xml
+++ b/app/src/main/res/layout/activity_set_random.xml
@@ -30,7 +30,8 @@
             android:paddingTop="60dp"
             >
             <ScrollView
-                android:layout_width="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
             <LinearLayout
                 android:id="@+id/meatTab"
@@ -42,60 +43,146 @@
                 android:orientation="vertical"
                 android:paddingRight="10dp">
 
+                <RelativeLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_marginRight="5dp"
+                    >
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/chicken"
+                        android:onClick="chickenChosen"
+                        android:id="@+id/chickenImage"
+
+                        />
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:text="Chicken"
+                        android:background="#44FFFFFF"
+                        android:textColor="#0D4D4D"
+                        android:onClick="porkChosen"
+                        android:textSize="20dp"
+                        android:layout_toRightOf="@+id/chickenImage"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="5dp"
+                    >
+
+                    <ImageView
+                        android:id="@+id/porkImage"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/pork"
+                        android:layout_alignParentRight="true"
+                        android:onClick="porkChosen"
 
 
-                <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="porkChosen"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginTop="20dp"
                     />
+                    <Button
+                        android:id="@+id/porkButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:text="Pork"
+                        android:background="#44FFFFFF"
+                        android:textColor="#0D4D4D"
+                        android:onClick="porkChosen"
+                        android:textSize="20dp"
+                        android:layout_toLeftOf="@+id/porkImage"
+                        />
 
-                <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="chickenChosen"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginRight="5dp"
-                    />
+                </RelativeLayout>
 
-                <ImageButton
+                <RelativeLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="fishChosen"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="5dp"
-                    />
+                    >
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/beef"
+                        android:onClick="beefChosen"
+                        android:id="@+id/beefImage"
 
-                <ImageButton
+                        />
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:text="Beef"
+                        android:background="#44FFFFFF"
+                        android:textColor="#0D4D4D"
+                        android:onClick="beefChosen"
+                        android:textSize="20dp"
+                        android:layout_toRightOf="@+id/beefImage"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="otherChosen"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="5dp"
-                    />
-                <ImageButton
+                    >
+
+                    <ImageView
+                        android:id="@+id/fishImage"
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/fish"
+                        android:layout_alignParentRight="true"
+                        android:onClick="fishChosen"
+
+
+                        />
+                    <Button
+                        android:id="@+id/fishButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:text="Fish"
+                        android:background="#44FFFFFF"
+                        android:textColor="#0D4D4D"
+                        android:onClick="fishChosen"
+                        android:textSize="20dp"
+                        android:layout_toLeftOf="@+id/fishImage"
+                        />
+
+                </RelativeLayout>
+                <RelativeLayout
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="otherChosen"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="5dp"
-                    />
-                <ImageButton
-                    android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:background="@drawable/pork"
-                    android:onClick="otherChosen"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginRight="5dp"
-                    />
+                    >
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:background="@drawable/vegie"
+                        android:onClick="veggieChosen"
+                        android:id="@+id/veggieImage"
+
+                        />
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="90dp"
+                        android:text="Vegetarian"
+                        android:background="#44FFFFFF"
+                        android:textColor="#0D4D4D"
+                        android:onClick="veggieChosen"
+                        android:textSize="20dp"
+                        android:layout_toRightOf="@+id/veggieImage"
+                        />
+                </RelativeLayout>
 
 
 
